# feo-new

./: .gitignore  Cargo.toml
examples/: erc20.feo
src/: ast.rs  error.rs  keccak.rs  lexer.rs  lib.rs  logger.rs  number.rs  parser.rs  semantic_analyser.rs  semantic_analyzer.rs  span.rs  test_utils.rs  token.rs  types.md
src/ast/: expression.rs  item.rs  pattern.rs  statement.rs  ty.rs  types.rs
src/error/: lex_error.rs  parser_error.rs  semantic_error.rs
src/parser/: alias_decl.rs  array_expr.rs  assignment_expr.rs  attribute.rs  binary_expr.rs  block_expr.rs  call_expr.rs  closure_expr.rs  collection.rs  compound_expr.rs  constant_decl.rs  enum_def.rs  expr.rs  expression.rs  expression_collection.rs  field_access_expr.rs  for_in_expr.rs  function_def.rs  function_item.rs  grouped_expr.rs  grouped_patt.rs  identifier_patt.rs  if_expr.rs  impl_def.rs  import_decl.rs  index_expr.rs  item.rs  let_statement.rs  mapping_expr.rs  match_expr.rs  method_call_expr.rs  module_def.rs  module_item.rs  parse.rs  path_expr.rs  path_patt.rs  path_type.rs  patt.rs  precedence.rs  range_expr.rs  (+22 more)
src/parser/expr/: array_expr.rs  assignment_expr.rs  binary_expr.rs  block_expr.rs  call_expr.rs  closure_expr.rs  field_access_expr.rs  for_in_expr.rs  grouped_expr.rs  if_expr.rs  index_expr.rs  mapping_expr.rs  match_expr.rs  method_call_expr.rs  path_expr.rs  range_expr.rs  result_expr.rs  return_expr.rs  some_expr.rs  struct_expr.rs  tuple_expr.rs  unary_expr.rs  (+4 more)
src/semantic_analyser/: expr.rs  patt.rs  symbol_table.rs  tests.rs  utils.rs
src/semantic_analyzer/: symbol_table.rs
(+24 files in other folders)
