[package]
name = "feo-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-hash = "0.8"
hex = "0.4"
ordered-float = { version = "4.3", default-features = false }
tiny-keccak = { version = "2.0", features = ["sha3"] }
uint = "0.10"
